--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "watchtest": "jest --watch"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "jest-extended",
+    "testRegex": "(/__tests__/|(\\.|/)(test|spec))\\.(jsx?|tsx?)$"
   },
   "author": "JeffMinsungKim",
   "license": "ISC",
@@ -17,6 +22,8 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
+    "jest": "^22.4.3",
+    "jest-extended": "^0.7.1",
     "nodemon": "^1.17.4"
   }
 }
